gcc/testsuite/gcc.dg/cilk-plus/pragma_simd_tests/errors/opt_error2.c
/* { dg-do compile } */
/* { dg-options "-O3 -Wunknown-pragmas" } */

int main(void)
{ 
  int ii,  A[1000];
#pragma simd  /* { dg-warning "ignoring" } */
  for (ii = 0; ii < 1000; ii++)
    {
      A[ii] = ii;
    }
  return 0;
}
